// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextareaAutosize /> renders ok 1`] = `
<DocumentFragment>
  <textarea />
</DocumentFragment>
`;

exports[`<TextareaAutosize /> renders with initial height passed in style prop 1`] = `
<DocumentFragment>
  <textarea
    style="height: 55px;"
  />
</DocumentFragment>
`;
